--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en"> 
 <head>
-	<title>BenjaminFagiano - QA Manual</title>
+	<title>Benjamín Fagiano - QA Tester Manual</title>
 	
 	<!-- Meta -->
 	<meta charset="utf-8">
