--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 					<div class="resume-wrapper mx-auto rounded-2">
 						<div class="resume-header px-4 px-lg-5">
 							<div class="resume-profile-holder text-center">
-								<img class="resume-profile-pic rounded-circle" src="E:/Portfolio/Git Pages/BenjaFagiano.github.io/assets/images/profile.png" alt="image">
+								<img class="resume-profile-pic rounded-circle" src="E:/Portfolio/Git Pages/BenjaFagiano.github.io/assets/assets/images/profile.png" alt="image">
 								
 								<h2 class="resume-name text-uppercase">Benjamín Fagiano </h2>
 								<div class="resume-role-title text-uppercase">QA Tester Manual</div>
@@ -63,7 +63,7 @@
 									<ul class="resume-contact-list list-unstyled list-inline mb-0 justify-content-between">
 										<li class="list-inline-item me-md-3 me-lg-5"><i class="resume-contact-icon bi bi-telephone-inbound me-2"></i> +54-3516795174</li>
 										<li class="list-inline-item me-md-3 me-lg-5"><i class="resume-contact-icon bi bi-envelope me-2"></i> b4fagiano@gmail.com</li>
-										<li class="list-inline-item me-lg-5"><i class="resume-contact-icon bi bi-globe me-2"></i> www.yourwebsite.com</li>
+										<li class="list-inline-item me-lg-5"><i class="resume-contact-icon bi bi-globe me-2"></i> www.youtube.com/BenjaFagiano</li>
 									</ul>
 								</div><!--//resume-contact-->
 							</div><!--//profile-holder-->
