--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 					<div class="resume-wrapper mx-auto rounded-2">
 						<div class="resume-header px-4 px-lg-5">
 							<div class="resume-profile-holder text-center">
-								<img class="resume-profile-pic rounded-circle" src="E:/Portfolio/Git Pages/BenjaFagiano.github.io/assets/images/perfil.png" alt="image">
+								<img class="resume-profile-pic rounded-circle" src="E:/Portfolio/Git Pages/BenjaFagiano.github.io/assets/images/perfil.png" alt="images">
 								
 								<h2 class="resume-name text-uppercase">Benjamín Fagiano </h2>
 								<div class="resume-role-title text-uppercase">QA Tester Manual</div>
