--- a/index.html
+++ b/index.html
@@ -192,26 +192,26 @@
 										
 										<ul class="list-unstyled">
 								        <li class="mb-2">
-								            <div class="resume-skill-name">JavaScript</div>
+								            <div class="resume-skill-name">Jira</div>
 											<div class="progress resume-progress" role="progressbar" aria-label="Basic example" aria-valuenow="98" aria-valuemin="0" aria-valuemax="100">
 											  <div class="progress-bar resume-progress-bar" style="width: 98%"></div>
 											</div>
 								        </li>
 								        <li class="mb-2">
-								            <div class="resume-skill-name">ReactJS</div>
+								            <div class="resume-skill-name">Visual Studio Code</div>
 								            <div class="progress resume-progress" role="progressbar" aria-label="Basic example" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100">
 											  <div class="progress-bar resume-progress-bar" style="width: 95%"></div>
 											</div>
 									        
 								        </li>
 								        <li class="mb-2">
-								            <div class="resume-skill-name">Python</div>
+								            <div class="resume-skill-name">Excel</div>
 									        <div class="progress resume-progress" role="progressbar" aria-label="Basic example" aria-valuenow="92" aria-valuemin="0" aria-valuemax="100">
 											  <div class="progress-bar resume-progress-bar" style="width: 92%"></div>
 											</div>
 								        </li>
 								        <li class="mb-2">
-								            <div class="resume-skill-name">MongoDB</div>
+								            <div class="resume-skill-name">Slack</div>
 									        <div class="progress resume-progress" role="progressbar" aria-label="Basic example" aria-valuenow="86" aria-valuemin="0" aria-valuemax="100">
 											  <div class="progress-bar resume-progress-bar" style="width: 86%"></div>
 											</div>
