--- a/index.html
+++ b/index.html
@@ -204,13 +204,13 @@
 									<section class="resume-projects-section resume-section">
 										<h3 class="resume-section-heading text-uppercase py-2 py-lg-3 py-3"><i class="resume-section-heading-icon bi bi-code-slash me-2"></i>Projects</h3>
 										<div class="item">
-											<h4 class="item-heading"><i class="item-icon bi bi-square-fill me-2"></i><a href="https://github.com/BenjaFagiano/lovellSoccer">Pueba Automatizada</a></h4>
+											<h4 class="item-heading"><i class="item-icon bi bi-square-fill me-2"></i><a target="_blank" href="https://github.com/BenjaFagiano/lovellSoccer">Pueba Automatizada</a></h4>
 											<div class="item-desc">
 												Automatización de la página Lovell Socce
 											</div>
 										</div><!--//item-->
 										<div class="item">
-											<h4 class="item-heading"><i class="item-icon bi bi-square-fill me-2"></i><a href="https://docs.google.com/spreadsheets/d/1MmPeXWwsGxTRV54xnryxqAOSuD36d1Hnqs4jhMmFFBA/edit#gid=0">Reporte de Bug</a></h4>
+											<h4 class="item-heading"><i class="item-icon bi bi-square-fill me-2"></i><a target="_blank" href="https://docs.google.com/spreadsheets/d/1MmPeXWwsGxTRV54xnryxqAOSuD36d1Hnqs4jhMmFFBA/edit#gid=0">Reporte de Bug</a></h4>
 											<div class="item-desc">
 												Bug reportado en Excel, con link al mismo en Jira
 											</div>
